change report #15 at 02/10/2014 18:10:56.52
-
for git branch
develop
in repository local-government-online-apps
-
changes in this branch since its last commit
 M CHANGES.txt
 M js2/lgonlineEditing.js