@@ -87,7 +87,7 @@
         "classname": "js.LGNotes",
         "config": {
             "notes": [
-                "commit c0d0e13725b5589a 2014-02-10 18:11:37 -0500"
+                "commit b9244eb90b3a773b 2014-02-10 20:38:37 -0500"
             ]
         }
     }, {
