@@ -1,4 +1,4 @@
-change report #15 at 02/10/2014 18:10:56.52
+change report #16 at 02/10/2014 20:37:57.93
 -
 for git branch
 develop
@@ -6,4 +6,5 @@ in repository local-government-online-apps
 -
 changes in this branch since its last commit
  M CHANGES.txt
- M js2/lgonlineEditing.js
+ D apps2/TagEditView.json
+?? apps2/FindEditFilter.json
